# os-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  ramdisk.img
.github/workflows/: build.yaml
bootloader-lib/: Cargo.toml
bootloader-lib/src/: lib.rs
bootloader/x86_64/uefi/: Cargo.toml  linker.ld
bootloader/x86_64/uefi/.cargo/: config.toml
bootloader/x86_64/uefi/src/: main.rs
kernel/: Cargo.toml
kernel-lib/: Cargo.toml
kernel-lib/src/: allocator.rs  boot_info.rs  lib.rs  mutex.rs
kernel-proc-macros/: Cargo.toml
kernel-proc-macros/src/: lib.rs
kernel/src/: idt.rs  lib.rs  main.rs
kernel/src/common/: mod.rs
kernel/src/log/: display.rs  font.rs  mod.rs  serial.rs
kernel/src/memory/: heap.rs  mod.rs  page_table.rs
kernel/src/modules/: mod.rs  serial_log.rs
kernel/src/ramdisk/: elf.rs  fs.rs  mod.rs
modules/demo-module/lib/: Cargo.toml
modules/demo-module/lib/src/: lib.rs
modules/demo-module/mod/: Cargo.toml
modules/demo-module/mod/src/: main.rs
modules/serial-log/lib/: Cargo.toml
modules/serial-log/lib/src/: lib.rs
modules/test-modules/: Cargo.toml
modules/test-modules/src/: main.rs
ramdisk/: test.txt
src/: main.rs
