[package]
name = "os"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11.10"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
demo-module-mod = { path = "modules/demo-module/mod", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.2.2"

[workspace]
members = [
	"kernel", 
	"kernel-lib", 
	"kernel-proc-macros", 
	"modules/demo-module/lib", 
	"modules/demo-module/mod", 
	"modules/serial-log/lib", 
]
