[package]
name = "os-builder"
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
kernel = { path = "./kernel/", artifact = "bin", target = "x86_64-unknown-none" }
bootloader-x86_64-uefi = { path = "./bootloader/x86_64/uefi/", artifact = "bin", target = "x86_64-unknown-uefi" }

[workspace]
resolver = "3"
members = [
	"bootloader-lib", 
	"bootloader/x86_64/uefi",
	"kernel", 
	"kernel-lib", 
	"kernel-proc-macros", 
	"modules/demo-module/lib", 
	"modules/demo-module/mod", 
	"modules/serial-log/lib", 
]
