[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.10"
kernel-lib = { path = "../kernel-lib/" }
kernel-proc-macros = { path = "../kernel-proc-macros/" }
demo-module-lib = { path = "../modules/demo-module/lib/" }
serial-log-lib = { path = "../modules/serial-log/lib/" }
